# tools

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  TOOLS_GUIDE.md  index.html  pyproject.toml
.cursor/commands/: git-commit.md  update-index-html.md  web-tool.md
.github/: GITHUB_PAGES_SETUP.md  copilot-instructions.md
.github/workflows/: claude-code-review.yml  claude.yml  lint.yml  pages.yml  test.yml
bash/: README.md
ci/: README.md  README_BASE.md  check_executable.py  check_help.py  check_html_metadata.py  check_main_guard.py  check_no_any.py  check_no_argparse.py  check_no_print.py  check_rich_print.py  check_typer_cli.py  generate_index.py  generate_readme.py
html/: README.md  html_to_text.html  strip_pdf_metadata.html
lib/: README.md
python/: README.md  burn_iso.py  convert_arrow_to_parquet_streaming.py  count_parquet_rows.py  dedup_dirs.py  download_video.py  html_to_text.py  ipynb_to_py_sphinx.py  strip_pdf_metadata.py  yt_transcript.py
tests/: README.md  conftest.py  test_placeholder.py  test_yt_transcript.py
